// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bundle > bundle and translate x-type to schema (for regular $ref objects) 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                Simple: string
                Or:
                  - number
                  - boolean
                ArrayOfEnums:
                  array:
                    - foo
                    - bar
                OpenObject:
                  required: boolean
                  string: boolean
                Ref: number
                RefObject:
                  somekey:
                    - true
                    - 42.1
                  $literal:string: $literal:number
                ConditionalRef:
                  - $ref: '#/components/x-types/Bar'
                  - undefined
              examples:
                Test:
                  value:
                    Simple: some string
                    Or: 42
                    ArrayOfEnums:
                      - foo
                      - foo
                      - bar
                    OpenObject:
                      required: true
                      not-listed-property: false
                    Ref: 42
                    RefObject:
                      foo: not expected here
                      somekey: 42.1
                      string: number
              schema:
                type: object
                properties:
                  Simple:
                    type: string
                  Or:
                    anyOf:
                      - type: number
                      - type: boolean
                  ArrayOfEnums:
                    type: array
                    items:
                      type: string
                      enum:
                        - foo
                        - bar
                  OpenObject:
                    type: object
                    properties:
                      required:
                        type: boolean
                    required:
                      - required
                    additionalProperties:
                      type: boolean
                  Ref:
                    type: number
                  RefObject:
                    type: object
                    properties:
                      somekey:
                        anyOf:
                          - type: boolean
                            enum:
                              - true
                          - type: number
                            enum:
                              - 42.1
                      string:
                        type: string
                        enum:
                          - number
                    required:
                      - somekey
                      - string
                    additionalProperties: false
                  ConditionalRef:
                    type: object
                    properties:
                      somekey:
                        anyOf:
                          - type: boolean
                            enum:
                              - true
                          - type: number
                            enum:
                              - 42.1
                      string:
                        type: string
                        enum:
                          - number
                    required:
                      - somekey
                      - string
                    additionalProperties: false
                required:
                  - Simple
                  - Or
                  - ArrayOfEnums
                  - OpenObject
                  - Ref
                  - RefObject
                additionalProperties: false
components:
  x-types:
    Foo: number
    Bar:
      somekey:
        - true
        - 42.1
      $literal:string: $literal:number
"
`;

exports[`bundle > descriptions in x-types 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Root response description.
          content:
            application/json:
              x-type:
                Plain: string
                Complex:
                  array:
                    string: boolean
                    $literal:string:
                      - $literal:number
                      - $literal:string
                    $descriptions:
                      string: |
                        An example of using literals.
                Conditional:
                  - az
                  - undefined
                $literal:$descriptions: $descriptions
                Referenced: string
                NestedReferenced:
                  ReferencedAgain:
                    $ref: '#/components/x-types/Referenced'
                  $descriptions:
                    ReferencedAgain: Referenced inside the ref.
                $descriptions:
                  Plain: A plain string field.
                  Complex: An array of boolean records with the fixed 'string' property.
                  Conditional: A conditional field.
                  $descriptions: Literal $descriptions field.
                  Referenced: A referenced property.
                  NestedReferenced: A reference with nested references.
              schema:
                type: object
                properties:
                  Plain:
                    description: A plain string field.
                    type: string
                  Complex:
                    description: An array of boolean records with the fixed 'string' property.
                    type: array
                    items:
                      type: object
                      properties:
                        string:
                          description: |
                            An example of using literals.
                          type: string
                          enum:
                            - number
                            - string
                      required:
                        - string
                      additionalProperties:
                        type: boolean
                  Conditional:
                    description: A conditional field.
                    type: string
                    enum:
                      - az
                  $descriptions:
                    description: Literal $descriptions field.
                    type: string
                    enum:
                      - $descriptions
                  Referenced:
                    description: A referenced property.
                    type: string
                  NestedReferenced:
                    description: A reference with nested references.
                    type: object
                    properties:
                      ReferencedAgain:
                        description: Referenced inside the ref.
                        type: string
                    required:
                      - ReferencedAgain
                    additionalProperties: false
                required:
                  - Plain
                  - Complex
                  - $descriptions
                  - Referenced
                  - NestedReferenced
                additionalProperties: false
components:
  x-types:
    Referenced: string
    NestedReferenced:
      ReferencedAgain: string
      $descriptions:
        ReferencedAgain: Referenced inside the ref.
"
`;

exports[`bundle > distributivity in x-types 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test.
          content:
            application/json:
              examples:
                Correct:
                  value:
                    az: correct
                    vidh: correct
                Incorrect:
                  value:
                    bukh: requires also vidh
              x-type:
                $and:
                  - - az: string
                    - bukh: string
                  - - vidh: string
              schema:
                anyOf:
                  - type: object
                    properties:
                      az:
                        type: string
                      vidh:
                        type: string
                    required:
                      - az
                      - vidh
                    additionalProperties: false
                  - type: object
                    properties:
                      bukh:
                        type: string
                      vidh:
                        type: string
                    required:
                      - bukh
                      - vidh
                    additionalProperties: false
components: {}
"
`;

exports[`bundle > do not add schemas if there is no x-type 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              examples:
                Test:
                  value:
                    Simple: some string
components: {}
"
`;

exports[`bundle > do not bundle an openapi with type never 1`] = `undefined`;

exports[`bundle > openapi writeOnly and readOnly fields 1`] = `
"openapi: 3.1.0
info:
  title: Test writeOnly/readOnly fields
  version: 1.0.0
paths:
  /test:
    get:
      requestBody:
        content:
          application/json:
            x-type:
              id:
                $readonly: string::uuid
                not-allowed: $readonly and $writeonly must not have neighbours
              name:
                $readonly: string
                $writeonly:
                  first: string
                  last: string
            examples:
              Correct:
                value:
                  name:
                    first: string
                    last: string
              Incorrect:
                value:
                  id: uuid-like-id
                  name: First Last
            schema:
              type: object
              properties:
                id:
                  not: {}
                name:
                  type: object
                  properties:
                    first:
                      type: string
                    last:
                      type: string
                  required:
                    - first
                    - last
                  additionalProperties: false
              required:
                - name
              additionalProperties: false
      responses:
        '200':
          description: Test.
          content:
            application/json:
              x-type:
                id:
                  $readonly: string::uuid
                  not-allowed: $readonly and $writeonly must not have neighbours
                name:
                  $readonly: string
                  $writeonly:
                    first: string
                    last: string
              examples:
                Correct:
                  value:
                    id: uuid-like-id
                    name: First Last
                Incorrect:
                  value:
                    name:
                      first: Wrong
                      last: Wrong
              schema:
                type: object
                properties:
                  id:
                    type: string
                    format: uuid
                  name:
                    type: string
                required:
                  - id
                  - name
                additionalProperties: false
components:
  x-types:
    Id:
      $readonly: string::uuid
      not-allowed: $readonly and $writeonly must not have neighbours
    Name:
      $readonly: string
      $writeonly:
        first: string
        last: string
    Person:
      id:
        $readonly: string::uuid
        not-allowed: $readonly and $writeonly must not have neighbours
      name:
        $readonly: string
        $writeonly:
          first: string
          last: string
"
`;

exports[`bundle > replace existing schemas 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type: string
              schema:
                type: string
components: {}
"
`;

exports[`bundle > resolve and translate $ands 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                $and:
                  - foo: boolean
                  - bar: number
              example:
                foo: wrong!
                wrong: not-expected!
              schema:
                type: object
                properties:
                  foo:
                    type: boolean
                  bar:
                    type: number
                required:
                  - foo
                  - bar
                additionalProperties: false
            application/problems+json:
              x-type:
                WrongAndFormat:
                  $and:
                    foo: boolean
                    bar: number
                Empty:
                  $and: []
                ImpossibleArraysCombination:
                  $and:
                    - array: string
                    - array: number
              schema:
                type: object
                properties:
                  WrongAndFormat:
                    not: {}
                  Empty:
                    not: {}
                  ImpossibleArraysCombination:
                    not: {}
                required: []
                additionalProperties: false
components:
  x-types:
    CorrectAnd:
      $and:
        - foo: boolean
        - bar: number
"
`;

exports[`bundle > resolve different type of $refs on different levels and ignore wrong $refs (with --force) when bundling 1`] = `
"openapi: 3.1.0
info:
  title: Test internal $refs
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: An object with refs
          content:
            application/json:
              x-type:
                AFieldWithRegularRef: any
                AFieldWithInlineRef: any
              examples:
                Correct:
                  value:
                    AFieldWithInlineRef: something
                    AFieldWithRegularRef: anything
                Incorrect:
                  value:
                    NonExistingField: wrong
              schema:
                type: object
                properties:
                  AFieldWithRegularRef: {}
                  AFieldWithInlineRef: {}
                required:
                  - AFieldWithRegularRef
                  - AFieldWithInlineRef
                additionalProperties: false
        '201':
          description: A bare ref
          content:
            application/json:
              x-type: any
              examples:
                Correct:
                  value: Anything
              schema: {}
        '202':
          description: A file reference
          content:
            application/json:
              x-type: number
              examples:
                Correct:
                  value: 42
                Incorrect:
                  value: false
              schema:
                type: number
        '203':
          description: A transitive reference
          content:
            application/json:
              x-type:
                array: any
              examples:
                Correct:
                  value:
                    - anything
                Incorrect:
                  value: anything
              schema:
                type: array
                items: {}
        '404':
          description: A wrong ref
          content:
            application/json:
              x-type:
                AWrongRef:
                  $ref: wrong-file.yaml
              example:
                AWrongRef: Accepts anything
              schema:
                type: object
                properties:
                  AWrongRef: {}
                required:
                  - AWrongRef
                additionalProperties: false
components:
  x-types:
    Foo: any
    Bar:
      array: any
"
`;

exports[`bundle > translate string and number formats 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test
          content:
            application/json:
              x-type:
                Formats:
                  String: string
                  Date: string::date
                  DateTime: string::date-time
                  Email: string::email
                  UUID: string::uuid
                  Binary: string::binary
                  Number: number
                  Integer: number::integer
              schema:
                type: object
                properties:
                  Formats:
                    type: object
                    properties:
                      String:
                        type: string
                      Date:
                        type: string
                        format: date
                      DateTime:
                        type: string
                        format: date-time
                      Email:
                        type: string
                        format: email
                      UUID:
                        type: string
                        format: uuid
                      Binary:
                        type: string
                        format: binary
                      Number:
                        type: number
                      Integer:
                        type: integer
                    required:
                      - String
                      - Date
                      - DateTime
                      - Email
                      - UUID
                      - Binary
                      - Number
                      - Integer
                    additionalProperties: false
                required:
                  - Formats
                additionalProperties: false
components: {}
"
`;

exports[`bundle > translate x-type to schema inside parameters 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      parameters:
        - name: correct
          in: query
          x-type: string
          example: Test
          schema:
            type: string
        - name: wrong-example
          in: query
          x-type: string
          example: 42
          schema:
            type: string
        - name: lacks-x-type
          in: query
        - $ref: '#/components/parameters/Referenced'
components:
  parameters:
    Referenced:
      name: referenced-wrong-example
      in: query
      x-type: string
      example: true
      schema:
        type: string
"
`;

exports[`bundle > translate x-types inside ORs 1`] = `
"openapi: 3.1.0
info:
  title: Test
  version: 1.0.0
paths:
  /test:
    get:
      responses:
        '200':
          description: Test.
          content:
            application/json:
              x-type:
                Or:
                  - az
                  - bukh
                Conditional:
                  - vidh
                  - undefined
                NestedConditional:
                  - $ref: '#/components/x-types/Or'
                  - $ref: '#/components/x-types/Conditional'
                ComplexOr:
                  - az
                  - bukh: vidh
                  - - $literal:string
                    - $literal:number
              examples:
                Correct:
                  value:
                    Or: az
                    ComplexOr: string
                Incorrect:
                  value:
                    Or: wrong
                    Conditional: wrong
                    NestedConditional: wrong
                    ComplexOr: wrong
              schema:
                type: object
                properties:
                  Or:
                    type: string
                    enum:
                      - az
                      - bukh
                  Conditional:
                    type: string
                    enum:
                      - vidh
                  NestedConditional:
                    type: string
                    enum:
                      - az
                      - bukh
                      - vidh
                  ComplexOr:
                    anyOf:
                      - type: string
                        enum:
                          - az
                          - string
                          - number
                      - type: object
                        properties:
                          bukh:
                            type: string
                            enum:
                              - vidh
                        required:
                          - bukh
                        additionalProperties: false
                required:
                  - Or
                  - ComplexOr
                additionalProperties: false
components:
  x-types:
    Or:
      - az
      - bukh
    Conditional:
      - vidh
      - undefined
"
`;

exports[`lint > distribytivity in x-types 1`] = `
"validating applications/resources/openapi-with-nested-ors-in-ands.yaml...
[1] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'az'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'vidh'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/bukh

Example value must conform to the schema: must NOT have additional properties \`bukh\`.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'vidh'.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/openapi-with-nested-ors-in-ands.yaml:20:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must match a schema in anyOf.

18 |   Incorrect:
19 |     value:
20 |       bukh: requires also vidh
   |       ^^^^^^^^^^^^^^^^^^^^^^^^
21 |
22 | x-type:

referenced from applications/resources/openapi-with-nested-ors-in-ands.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi-with-nested-ors-in-ands.yaml: validated in <test>ms

❌ Validation failed with 5 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > general openapi case (using preprocessors to transform) 1`] = `
"validating applications/resources/openapi.yaml...
[1] applications/resources/openapi.yaml:46:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Test/value/RefObject/foo

Example value must conform to the schema: \`RefObject\` property must NOT have additional properties \`foo\`.

44 | Ref: 42
45 | RefObject:
46 |   foo: not expected here
   |   ^^^
47 |   somekey: 42.10
48 |   string: number

referenced from applications/resources/openapi.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi.yaml: validated in <test>ms

❌ Validation failed with 1 error.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > inline refs in x-openapi-with-refs.yaml 1`] = `
"validating applications/outputs/x-openapi-with-refs.yaml...
[1] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithRegularRef'.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'AFieldWithInlineRef'.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/outputs/x-openapi-with-refs.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/NonExistingField

Example value must conform to the schema: must NOT have additional properties \`NonExistingField\`.

21 |   Incorrect:
22 |     value:
23 |       NonExistingField: wrong
   |       ^^^^^^^^^^^^^^^^
24 | schema:
25 |   type: object

referenced from applications/outputs/x-openapi-with-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/outputs/x-openapi-with-refs.yaml:51:26 at #/paths/~1test/get/responses/202/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: type must be number.

49 |     value: 42
50 |   Incorrect:
51 |     value: false
   |            ^^^^^
52 | schema:
53 |   type: number

referenced from applications/outputs/x-openapi-with-refs.yaml:46:15 at #/paths/~1test/get/responses/202/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/outputs/x-openapi-with-refs.yaml:65:26 at #/paths/~1test/get/responses/203/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: type must be array.

63 |       - anything
64 |   Incorrect:
65 |     value: anything
   |            ^^^^^^^^
66 | schema:
67 |   type: array

referenced from applications/outputs/x-openapi-with-refs.yaml:58:15 at #/paths/~1test/get/responses/203/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/outputs/x-openapi-with-refs.yaml:75:19 at #/paths/~1test/get/responses/404/content/application~1json/x-type/AWrongRef

Can't resolve $ref: ENOENT: no such file or directory './applications/outputs/wrong-file.yaml'

73 | x-type:
74 |   AWrongRef:
75 |     $ref: wrong-file.yaml
   |     ^^^^^^^^^^^^^^^^^^^^^
76 | example:
77 |   AWrongRef: Accepts anything

Error was generated by the no-unresolved-refs rule.


applications/outputs/x-openapi-with-refs.yaml: validated in <test>ms

❌ Validation failed with 6 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi that contains wrong and correct $ands 1`] = `
"validating applications/resources/openapi-and.yaml...
ERROR! Expected an array but got:
{ foo: 'boolean', bar: 'number' }
ERROR! Cannot merge empty lists.
ERROR! Cannot merge 'array' types.
WARNING! Got an 'undefined' type.
WARNING! Got an 'undefined' type.
WARNING! Got an 'undefined' type.
[1] applications/resources/openapi-and.yaml:16:17 at #/paths/~1test/get/responses/200/content/application~1json/example

Example value must conform to the schema: must have required property 'bar'.

14 |     $ref: '#/components/x-types/CorrectAnd'
15 |   example:
16 |     foo: wrong!
   |     ^^^^^^^^^^^
17 |     wrong: not-expected!
   |     ^^^^^^^^^^^^^^^^^^^^
18 |
19 | application/problems+json:

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-and.yaml:17:17 at #/paths/~1test/get/responses/200/content/application~1json/example/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

15 |   example:
16 |     foo: wrong!
17 |     wrong: not-expected!
   |     ^^^^^
18 |
19 | application/problems+json:

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-and.yaml:16:22 at #/paths/~1test/get/responses/200/content/application~1json/example/foo

Example value must conform to the schema: \`foo\` property type must be boolean.

14 |   $ref: '#/components/x-types/CorrectAnd'
15 | example:
16 |   foo: wrong!
   |        ^^^^^^
17 |   wrong: not-expected!
18 |

referenced from applications/resources/openapi-and.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-and.yaml:23:21 at #/paths/~1test/get/responses/200/content/application~1problems+json/x-type/WrongAndFormat/$and

Expected type \`XTypeList\` (array) but got \`object\`

21 | WrongAndFormat:
22 |   $and: # Expected an array!
23 |     foo: boolean
   |     ^^^^^^^^^^^^
24 |     bar: number
   |     ^^^^^^^^^^^
25 | Empty: # Cannot merge empty lists!
26 |   $and: []

Error was generated by the spec rule.


applications/resources/openapi-and.yaml: validated in <test>ms

❌ Validation failed with 4 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with ORs (including nested and referenced) 1`] = `
"validating applications/resources/openapi-or.yaml...
[1] applications/resources/openapi-or.yaml:34:25 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/Or

Example value must conform to the schema: \`Or\` property must be equal to one of the allowed values "az", "bukh".

Did you mean:
  - az
  - bukh

32 | Incorrect:
33 |   value:
34 |     Or: wrong
   |         ^^^^^
35 |     Conditional: wrong
36 |     NestedConditional: wrong

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-or.yaml:35:34 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/Conditional

Example value must conform to the schema: \`Conditional\` property must be equal to one of the allowed values "vidh".

Did you mean: vidh ?

33 | value:
34 |   Or: wrong
35 |   Conditional: wrong
   |                ^^^^^
36 |   NestedConditional: wrong
37 |   ComplexOr: wrong

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-or.yaml:36:40 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/NestedConditional

Example value must conform to the schema: \`NestedConditional\` property must be equal to one of the allowed values "az", "bukh", "vidh".

Did you mean:
  - az
  - bukh
  - vidh

34 | Or: wrong
35 | Conditional: wrong
36 | NestedConditional: wrong
   |                    ^^^^^
37 | ComplexOr: wrong
38 |

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property must be equal to one of the allowed values "az", "string", "number".

Did you mean:
  - az
  - string
  - number

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property type must be object.

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/resources/openapi-or.yaml:37:32 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/ComplexOr

Example value must conform to the schema: \`ComplexOr\` property must match a schema in anyOf.

35 |                     Conditional: wrong
36 |                     NestedConditional: wrong
37 |                     ComplexOr: wrong
   |                                ^^^^^
38 |
39 | components:

referenced from applications/resources/openapi-or.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/openapi-or.yaml: validated in <test>ms

❌ Validation failed with 6 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with external $refs 1`] = `
"validating applications/resources/openapi-with-external-refs.yaml...
WARNING! Circular reference detected: #/Bukh
ERROR! Cannot resolve $ref:
external-refs.yaml#/NotExistingField
[1] applications/resources/openapi-with-external-refs.yaml:23:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/0

Example value must conform to the schema: \`0\` property type must be boolean.

21 |         Incorrect:
22 |           value:
23 |             - wrong, should be a boolean value
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |             - false # this is still correct
25 | 404:

referenced from applications/resources/openapi-with-external-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-with-external-refs.yaml:23:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/0

Example value must conform to the schema: \`0\` property type must be array.

21 |         Incorrect:
22 |           value:
23 |             - wrong, should be a boolean value
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |             - false # this is still correct
25 | 404:

referenced from applications/resources/openapi-with-external-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-with-external-refs.yaml:23:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/0

Example value must conform to the schema: \`0\` property must match a schema in anyOf.

21 |         Incorrect:
22 |           value:
23 |             - wrong, should be a boolean value
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
24 |             - false # this is still correct
25 | 404:

referenced from applications/resources/openapi-with-external-refs.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-with-external-refs.yaml:31:19 at #/paths/~1test/get/responses/404/content/application~1json/x-type/AWrongRef

Can't resolve $ref

29 | x-type:
30 |   AWrongRef:
31 |     $ref: external-refs.yaml#/NotExistingField
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
32 | example:
33 |   AWrongRef: Accepts anything

Error was generated by the no-unresolved-refs rule.


applications/resources/openapi-with-external-refs.yaml: validated in <test>ms

❌ Validation failed with 4 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with mixed types 1`] = `
"validating applications/resources/openapi-mixed-types.yaml...
[1] applications/resources/openapi-mixed-types.yaml:9:7 at #/components/x-types/MixedTypeArray/neighbour

Property \`neighbour\` is not expected here.

 7 | MixedTypeArray:
 8 |   array: string
 9 |   neighbour: not-allowed
   |   ^^^^^^^^^
10 | MixedAnd:
11 |   $and:

Error was generated by the spec rule.


[2] applications/resources/openapi-mixed-types.yaml:14:7 at #/components/x-types/MixedAnd/neighbour

Property \`neighbour\` is not expected here.

12 |     - foo: string
13 |     - bar: string
14 |   neighbour: not-allowed
   |   ^^^^^^^^^
15 | MixedRef:
16 |   $ref: '#/components/x-types/Allowed'

Error was generated by the spec rule.


[3] applications/resources/openapi-mixed-types.yaml:16:7 at #/components/x-types/MixedRef

You cannot have other properties alongside "$ref" in the same object

14 |   neighbour: not-allowed
15 | MixedRef:
16 |   $ref: '#/components/x-types/Allowed'
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |   neighbour: not-allowed
   |   ^^^^^^^^^^^^^^^^^^^^^^
18 | Allowed:
19 |   foo: boolean

Error was generated by the x-types/no-$ref-neighbors rule.


applications/resources/openapi-mixed-types.yaml: validated in <test>ms

❌ Validation failed with 3 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi with x-types inside parameters 1`] = `
"validating applications/resources/openapi-with-x-types-inside-parameters.yaml...
[1] applications/resources/openapi-with-x-types-inside-parameters.yaml:16:20 at #/paths/~1test/get/parameters/1/example

Example value must conform to the schema: type must be string.

14 |   in: query
15 |   x-type: string
16 |   example: 42
   |            ^^
17 | - name: lacks-x-type
18 |   in: query

referenced from applications/resources/openapi-with-x-types-inside-parameters.yaml:13:11 at #/paths/~1test/get/parameters/1 

Error was generated by the no-invalid-parameter-examples rule.


[2] applications/resources/openapi-with-x-types-inside-parameters.yaml:17:11 at #/paths/~1test/get/parameters/2

Must contain at least one of the following fields: schema, content, x-type.

15 |           x-type: string
16 |           example: 42
17 |         - name: lacks-x-type
   |           ^^^^^^^^^^^^^^^^^^
18 |           in: query
   |           ^^^^^^^^^
19 |         - $ref: '#/components/parameters/Referenced'
20 | components:

Error was generated by the spec rule.


[3] applications/resources/openapi-with-x-types-inside-parameters.yaml:26:16 at #/components/parameters/Referenced/example

Example value must conform to the schema: type must be string.

24 | in: query
25 | x-type: string
26 | example: true
   |          ^^^^
27 |

referenced from applications/resources/openapi-with-x-types-inside-parameters.yaml:23:7 at #/components/parameters/Referenced 

Error was generated by the no-invalid-parameter-examples rule.


applications/resources/openapi-with-x-types-inside-parameters.yaml: validated in <test>ms

❌ Validation failed with 3 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > openapi writeOnly and readOnly fields 1`] = `
"validating applications/resources/openapi-with-writeonly-and-readonly.yaml...
WARNING! Got an 'undefined' type.
[1] applications/resources/openapi-with-writeonly-and-readonly.yaml:21:23 at #/paths/~1test/get/requestBody/content/application~1json/examples/Incorrect/value/id

Example value must conform to the schema: \`id\` property must NOT be valid.

19 |         Incorrect:
20 |           value:
21 |             id: uuid-like-id # not expected in response
   |                 ^^^^^^^^^^^^
22 |             name: First Last # must be an object
23 | responses:

referenced from applications/resources/openapi-with-writeonly-and-readonly.yaml:11:13 at #/paths/~1test/get/requestBody/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/openapi-with-writeonly-and-readonly.yaml:22:25 at #/paths/~1test/get/requestBody/content/application~1json/examples/Incorrect/value/name

Example value must conform to the schema: \`name\` property type must be object.

20 |           value:
21 |             id: uuid-like-id # not expected in response
22 |             name: First Last # must be an object
   |                   ^^^^^^^^^^
23 | responses:
24 |   200:

referenced from applications/resources/openapi-with-writeonly-and-readonly.yaml:11:13 at #/paths/~1test/get/requestBody/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/openapi-with-writeonly-and-readonly.yaml:37:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value

Example value must conform to the schema: must have required property 'id'.

35 | Incorrect:
36 |   value:
37 |     name: # must be a string
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
38 |       first: Wrong
   |       ^^^^^^^^^^^^
39 |       last: Wrong
   |       ^^^^^^^^^^^
40 |     # id is required
41 |

referenced from applications/resources/openapi-with-writeonly-and-readonly.yaml:28:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/openapi-with-writeonly-and-readonly.yaml:38:23 at #/paths/~1test/get/responses/200/content/application~1json/examples/Incorrect/value/name

Example value must conform to the schema: \`name\` property type must be string.

36 | value:
37 |   name: # must be a string
38 |     first: Wrong
   |     ^^^^^^^^^^^^
39 |     last: Wrong
   |     ^^^^^^^^^^^
40 |   # id is required
41 |

referenced from applications/resources/openapi-with-writeonly-and-readonly.yaml:28:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/openapi-with-writeonly-and-readonly.yaml:46:7 at #/components/x-types/Id/not-allowed

Property \`not-allowed\` is not expected here.

44 | Id:
45 |   $readonly: string::uuid
46 |   not-allowed: $readonly and $writeonly must not have neighbours
   |   ^^^^^^^^^^^
47 | Name:
48 |   $readonly: string

Error was generated by the spec rule.


applications/resources/openapi-with-writeonly-and-readonly.yaml: validated in <test>ms

❌ Validation failed with 5 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;

exports[`lint > x-types described with x-types themselves 1`] = `
"validating applications/resources/x-types-described-with-x-types.yaml...
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Or
WARNING! Circular reference detected: #/And
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Array
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/XType
WARNING! Circular reference detected: #/Record
[1] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: type must be string.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[2] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: type must be number.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[3] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: type must be boolean.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[4] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: type must be null.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[5] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: type must be array.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[6] applications/resources/x-types-described-with-x-types.yaml:21:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

19 |       - {Az: number}
20 |       - {Bukh: string}
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[7] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: must have required property 'array'.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[8] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value/$and

Example value must conform to the schema: must NOT have additional properties \`$and\`.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^
19 |       - {Az: number}
20 |       - {Bukh: string}

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[9] applications/resources/x-types-described-with-x-types.yaml:21:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

19 |       - {Az: number}
20 |       - {Bukh: string}
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[10] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value/$and

Example value must conform to the schema: must NOT have additional properties \`$and\`.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^
19 |       - {Az: number}
20 |       - {Bukh: string}

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[11] applications/resources/x-types-described-with-x-types.yaml:18:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongAndUsage/value

Example value must conform to the schema: must match a schema in anyOf.

16 | WrongAndUsage:
17 |   value:
18 |     $and:
   |     ^^^^^
19 |       - {Az: number}
   |       ^^^^^^^^^^^^^^
20 |       - {Bukh: string}
   |       ^^^^^^^^^^^^^^^^
21 |     wrong: should not be defined along the \`$and\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
22 | CorrectAndUsage:
23 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[12] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: type must be string.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[13] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: type must be number.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[14] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: type must be boolean.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[15] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: type must be null.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[16] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: type must be array.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[17] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: must have required property '$and'.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[18] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value/array

Example value must conform to the schema: must NOT have additional properties \`array\`.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
31 | CorrectArrayUsage:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[19] applications/resources/x-types-described-with-x-types.yaml:30:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

28 |   value:
29 |     array: string
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[20] applications/resources/x-types-described-with-x-types.yaml:30:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value/wrong

Example value must conform to the schema: must NOT have additional properties \`wrong\`.

28 |   value:
29 |     array: string
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[21] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value/array

Example value must conform to the schema: must NOT have additional properties \`array\`.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
31 | CorrectArrayUsage:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


[22] applications/resources/x-types-described-with-x-types.yaml:29:21 at #/paths/~1test/get/responses/200/content/application~1json/examples/WrongArrayUsage/value

Example value must conform to the schema: must match a schema in anyOf.

27 | WrongArrayUsage:
28 |   value:
29 |     array: string
   |     ^^^^^^^^^^^^^
30 |     wrong: should not ne defined along the \`array\` keyword!
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | CorrectArrayUsage:
32 |   value:

referenced from applications/resources/x-types-described-with-x-types.yaml:13:15 at #/paths/~1test/get/responses/200/content/application~1json 

Error was generated by the no-invalid-media-type-examples rule.


applications/resources/x-types-described-with-x-types.yaml: validated in <test>ms

❌ Validation failed with 22 errors.
run \`redocly lint --generate-ignore-file\` to add all problems to the ignore file.

"
`;
